fix: Hardcode swagger-ui version to resolve display issues